DHO-204 - fix email icon text becoming visible when focused

--- a/styles/helpers/_social_share-button.scss
+++ b/styles/helpers/_social_share-button.scss
@@ -180,6 +180,7 @@
     &.email {
 
         display: inline-block;
+        font-size: 0;
         vertical-align: middle;
         text-align: center;
         @media #{$large-up} {
